<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/space_16"
    android:background="@drawable/bg_layout_white_border_grey_corner_10"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/bg_full_circle_white"
        android:src="@drawable/icon_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPrevComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_previous_company"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:fontFamily="@font/roboto_medium_600"
        android:textColor="@color/text_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/eEditCompField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:textSize="@dimen/text_16"
        android:text="@string/prev_company_nameh"
        android:textStyle="italic"
        android:textColor="@color/text_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPrevComp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eEditCompEdTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/light_grey"
        app:errorEnabled="true"
        android:hint="@string/enter_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eEditCompField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/eEditCompDesigField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:textSize="@dimen/text_16"
        android:textStyle="italic"
        android:text="@string/your_designation"
        android:visibility="visible"
        android:textColor="@color/text_heading"
        app:layout_constraintStart_toStartOf="@id/eEditCompEdTxt"
        app:layout_constraintTop_toBottomOf="@id/eEditCompEdTxt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eEditComDesigEdTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/light_grey"
        app:errorEnabled="true"
        android:hint="@string/enter_your_designation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/eEditCompDesigField"
        app:layout_constraintTop_toBottomOf="@id/eEditCompDesigField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/eEditFromField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:textSize="@dimen/text_16"
        android:textStyle="italic"
        android:text="@string/from_dateh"
        android:visibility="visible"
        android:textColor="@color/text_heading"
        app:layout_constraintStart_toStartOf="@id/eEditCompEdTxt"
        app:layout_constraintTop_toBottomOf="@id/eEditComDesigEdTxt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eEditFromEdTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/light_grey"
        app:errorEnabled="true"
        android:hint="@string/select"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintEnd_toStartOf="@id/eEditToEdTxt"
        app:layout_constraintStart_toStartOf="@id/eEditFromField"
        app:layout_constraintTop_toBottomOf="@id/eEditFromField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/eEditToField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:textSize="@dimen/text_16"
        android:textStyle="italic"
        android:textColor="@color/text_heading"
        android:text="@string/to_dateh"
        app:layout_constraintStart_toStartOf="@id/eEditToEdTxt"
        app:layout_constraintBottom_toTopOf="@id/eEditToEdTxt"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eEditToEdTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/light_grey"
        app:errorEnabled="true"
        app:layout_constraintHorizontal_weight="4"
        android:layout_marginStart="@dimen/space_16"
        android:hint="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eEditFromEdTxt"
        app:layout_constraintTop_toTopOf="@id/eEditFromEdTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/eAddPrevCompBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_previous"
        android:textAllCaps="false"
        android:textSize="@dimen/text_16"
        android:textAlignment="center"
        android:paddingVertical="@dimen/space_8"
        android:paddingEnd="@dimen/space_16"
        android:paddingStart="@dimen/space_8"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular_400"
        android:layout_marginTop="@dimen/space_8"
        android:background="@drawable/bg_button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eEditFromEdTxt"
        app:drawableStartCompat="@drawable/icon_add"
        app:drawableTint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>