<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.subFragment.recEditProfile.EditCompBasicFragment">


        <ImageView
            android:id="@+id/editTopImg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/image_edit_profile_comp_info_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:padding="@dimen/space_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTopImg"
            android:background="@drawable/bg_edit_comp_info">

            <TextView
                android:id="@+id/rEditTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/edit_company_details"
                android:textSize="@dimen/text_20"
                android:textColor="@color/text_heading"
                android:fontFamily="@font/roboto_medium_500"/>
            <TextView
                android:id="@+id/rEditSubTitleTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rEditTitleTxt"
                android:text="@string/company_basic_note"
                android:textSize="@dimen/text_16"
                android:textColor="@color/blue_500"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/roboto_medium_500"/>

            <TextView
                android:id="@+id/rEditComNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/company_nameh"
                android:textSize="@dimen/text_16"
                android:textStyle="italic"
                android:textColor="@color/text_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rEditSubTitleTxt"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rEditComNameEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_company_name"
                app:boxBackgroundColor="@color/light_grey"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/rEditComNameField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/compNameEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLength="40" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rEditEmailIdField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:textSize="@dimen/text_16"
                android:text="@string/emailh"
                android:textStyle="italic"
                android:textColor="@color/text_heading"
                app:layout_constraintStart_toStartOf="@id/rEditComNameEdTxt"
                app:layout_constraintTop_toBottomOf="@id/rEditComNameEdTxt"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rEmailEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/light_grey"
                app:errorEnabled="true"
                android:hint="@string/enter_company_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rEditEmailIdField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailNameEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="40" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rEditNumField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:textSize="@dimen/text_16"
                android:textStyle="italic"
                android:text="@string/contact_numh"
                android:visibility="visible"
                android:textColor="@color/text_heading"
                app:layout_constraintStart_toStartOf="@id/rEmailEdTxt"
                app:layout_constraintTop_toBottomOf="@id/rEmailEdTxt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rEditConNumEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/light_grey"
                app:errorEnabled="true"
                app:counterMaxLength="10"
                app:counterEnabled="true"
                android:hint="@string/enter_company_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/rEditNumField"
                app:layout_constraintTop_toBottomOf="@id/rEditNumField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conNumEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/rEditNextbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:paddingHorizontal="40dp"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/space_8"
                android:background="@drawable/button_round_corner"
                app:layout_constraintTop_toBottomOf="@id/rEditConNumEdTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>